--- a/microblog/app/templates/about.html
+++ b/microblog/app/templates/about.html
@@ -2,5 +2,7 @@
   
 {% block content %}
   <h2>About</h2>
-  <p>This is an About page for the Intro to Flask article. Don't I look good? Oh stop, you're making me blush.</p>
+  <div class="jumbo">
+  	<p>This page is trainning for flask and python.</p>
+  </div>
 {% endblock %}
