--- a/microblog/app/templates/home.html
+++ b/microblog/app/templates/home.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
   <div class="jumbo">
-<h2>Welcome to the Flask app<h2>
-    <h3>This is the home page for the Flask app<h3>
+<h2>Welcome to the FORUM<h2>
+    <h3>This is the home page for users post news about life.<h3>
   </div>
 {% endblock %}
