--- a/microblog/app/templates/login.html
+++ b/microblog/app/templates/login.html
@@ -2,16 +2,22 @@
 
 {% block content %}
   <h1>Sign In</h1>
+
   <form action="" method="post" name="login">
       {{ form.hidden_tag() }}
       <p>
-          Please enter your OpenID:<br>
-          {{ form.openid(size=80) }}<br>
+          Please enter a username:<br>
+          {{ form.openid(size=80) }}
           {% for error in form.openid.errors %}
-            <span style="color: red;">[{{ error }}]</span>
+            <span style="color: red;">[{{error}}]</span>
+          {% endfor %}<br>
+          Please enter you email:<br>
+          {{ form.email(size=80) }}
+          {% for error in form.email.errors %}
+            <span style="color: red;">[{{error}}]</span>
           {% endfor %}<br>
       </p>
-      <p>{{ form.remember_me }} Remember Me</p>
       <p><input type="submit" value="Sign In"></p>
   </form>
+
 {% endblock %}
