Starting to implement blueprint

--- a/microblog/app/templates/about.html
+++ b/microblog/app/templates/about.html
@@ -3,6 +3,6 @@
 {% block content %}
   <h2>About</h2>
   <div class="jumbo">
-  	<p>This page is trainning for flask and python.</p>
+  	<p>This page is a trainning for flask and python.</p>
   </div>
 {% endblock %}
