--- a/microblog/app/templates/signin.html
+++ b/microblog/app/templates/signin.html
@@ -11,7 +11,7 @@
           {% for error in form.openid.errors %}
             <span style="color: red;">[{{error}}]</span>
           {% endfor %}<br>
-          Please enter you email:<br>
+          Please enter your email:<br>
           {{ form.email(size=80) }}
           {% for error in form.email.errors %}
             <span style="color: red;">[{{error}}]</span>
