--- a/microblog/app/templates/layout.html
+++ b/microblog/app/templates/layout.html
@@ -19,7 +19,8 @@
               <li><a href="{{ url_for('about') }}">About</a></li>
               <li><a href="{{ url_for('news') }}">News</a></li>
               <li><a href="{{ url_for('post') }}">Make a Post</a></li>
-              <li><a href="{{ url_for('login') }}">Sign in</a></li>
+              <li><a href="{{ url_for('signin') }}">Sign in</a></li>
+              <li><a href="{{ url_for('logout') }}">Logout</a></li>
             </ul>
           </nav></strong>
       </div>
