--- a/microblog/app/templates/layout.html
+++ b/microblog/app/templates/layout.html
@@ -15,12 +15,11 @@
         <h1 class="logo"> forum</h1>
           <strong><nav>
             <ul class="menu">
-              <li><a href="{{ url_for('home') }}">Home</a></li>
-              <li><a href="{{ url_for('about') }}">About</a></li>
-              <li><a href="{{ url_for('news') }}">News</a></li>
-              <li><a href="{{ url_for('post') }}">Make a Post</a></li>
-              <li><a href="{{ url_for('signin') }}">Sign in</a></li>
-              <li><a href="{{ url_for('logout') }}">Logout</a></li>
+              <li><a href="{{ url_for('noticias.home') }}">Home</a></li>
+              <li><a href="{{ url_for('noticias.about') }}">About</a></li>
+              <li><a href="{{ url_for('noticias.news') }}">News</a></li>
+              <li><a href="{{ url_for('noticias.post') }}">Make a Post</a></li>
+              <li><a href="{{ url_for('noticias.signin') }}">Sign in</a></li>
             </ul>
           </nav></strong>
       </div>
