--- a/microblog-site/microblog/webPage/templates/news.html
+++ b/microblog-site/microblog/webPage/templates/news.html
@@ -6,7 +6,7 @@
     	
     	<body>
         
-        <h2>{{title}}</h2>
+        <h2>New Posts</h2>
 
             {% for post in posts %}
        			<div class="jumbo">
