--- a/microblog-site/microblog/webPage/templates/about.html
+++ b/microblog-site/microblog/webPage/templates/about.html
@@ -3,6 +3,6 @@
 {% block content %}
   <h2>About</h2>
   <div class="jumbo">
-  	<p>This page is a trainning for flask and python.</p>
+  	<h3 class="post"><p>This page is a trainning for flask and python.</p></h3>
   </div>
 {% endblock %}
