--- a/microblog-site/microblog/webPage/templates/post.html
+++ b/microblog-site/microblog/webPage/templates/post.html
@@ -7,8 +7,8 @@
       {{ form.hidden_tag() }}
       <p>
           Please enter your OpenID:<br>
-          {{ form.openid(size=80) }}
-          {% for error in form.openid.errors %}
+          {{ form.userName(size=80) }}
+          {% for error in form.userName.errors %}
             <span style="color: red;">[{{error}}]</span>
           {% endfor %}<br>
           Your post:<br>  
@@ -17,7 +17,6 @@
             <span style="color: red">[{{error}}]</span>
           {% endfor %}
       </p>
-      <p>{{ form.remember_me }} Remember Me</p>
       <p><input type="submit" value="Post"></p>
   </form>
 
