--- a/microblog-site/microblog/webPage/templates/signin.html
+++ b/microblog-site/microblog/webPage/templates/signin.html
@@ -7,8 +7,8 @@
       {{ form.hidden_tag() }}
       <p>
           Please enter a username:<br>
-          {{ form.openid(size=80) }}
-          {% for error in form.openid.errors %}
+          {{ form.userName(size=80) }}
+          {% for error in form.userName.errors %}
             <span style="color: red;">[{{error}}]</span>
           {% endfor %}<br>
 
