DB problems resolved, webpages organized

--- a/microblog-site/microblog/webPage/templates/about.html
+++ b/microblog-site/microblog/webPage/templates/about.html
@@ -1,4 +1,8 @@
-{% extends "layout.html" %}
+{% if user %}
+    {% extends "layoutL.html" %}
+{% else %}
+    {% extends "layout.html" %}
+{% endif %}
   
 {% block content %}
   <h2>About</h2>
