--- a/microblog-site/microblog/webPage/templates/news.html
+++ b/microblog-site/microblog/webPage/templates/news.html
@@ -1,6 +1,11 @@
-{% extends "layout.html" %}
-  
+{% if user %}
+    {% extends "layoutL.html" %}
+{% else %}
+    {% extends "layout.html" %}
+{% endif %}
+
 {% block content %}
+
     <html>
     	<head><title>{{title}}</title></head>
     	
