--- a/microblog-site/microblog/webPage/templates/post.html
+++ b/microblog-site/microblog/webPage/templates/post.html
@@ -1,16 +1,11 @@
-{% extends "layout.html" %}
-  
+{% extends "layoutL.html" %}
 {% block content %}
-  <h1>Make a post</h1>
+
+  <h1>Hello {{ user }}, make a post.</h1>
   
   <form action="" method="post" name="login">
       {{ form.hidden_tag() }}
       <p>
-          Please enter your OpenID:<br>
-          {{ form.userName(size=80) }}
-          {% for error in form.userName.errors %}
-            <span style="color: red;">[{{error}}]</span>
-          {% endfor %}<br>
           Your post:<br>  
           {{ form.post(size=140) }}
           {% for erro in form.post.errors %}
