--- a/microblog-site/microblog/templates/layoutL.html
+++ b/microblog-site/microblog/templates/layoutL.html
@@ -18,8 +18,8 @@
               <li><a href="{{ url_for('webPage.home') }}">Home</a></li>
               <li><a href="{{ url_for('webPage.about') }}">About</a></li>
               <li><a href="{{ url_for('webPage.news') }}">News</a></li>
-              <li><a href="{{ url_for('webPage.signin') }}">Sign in</a></li>
-              <li><a href="{{ url_for('webPage.login') }}">Log in</a></li>
+              <li><a href="{{ url_for('webPage.post') }}">Make a Post</a></li>
+              <li><a href="{{ url_for('webPage.logout') }}">Logout</a></li>
               
               <li>
               <a href="#">Graphics</a>
