--- a/microblog-site/microblog/webPage/templates/home.html
+++ b/microblog-site/microblog/webPage/templates/home.html
@@ -1,7 +1,14 @@
-{% extends "layout.html" %}
+{% if user %}
+    {% extends "layoutL.html" %}
+{% else %}
+    {% extends "layout.html" %}
+{% endif %}
+
 {% block content %}
+
   <div class="jumbo">
 <h2>Welcome to the FORUM<h2>
     <h3>This is the home page for users post news about life.<h3>
   </div>
+  
 {% endblock %}
