Two visualizations working

--- a/microblog-site/microblog/visual/templates/energyJobsStacked.html
+++ b/microblog-site/microblog/visual/templates/energyJobsStacked.html
@@ -15,6 +15,6 @@
 <!-- create container element for visualization -->
 <div class="visu" id="viz"></div>
 
-<script src="{{ url_for('static', filename='js/treemap.js') }}"></script>
+<script src="{{ url_for('static', filename='js/stacked.js') }}"></script>
 
 {% endblock %}
