--- a/microblog-site/microblog/webPage/templates/home.html
+++ b/microblog-site/microblog/webPage/templates/home.html
@@ -10,5 +10,7 @@
 <h2>Welcome to the FORUM<h2>
     <h3>This is the home page for users post news about life.<h3>
   </div>
-  
+ 
+<iframe src="https://docs.google.com/presentation/d/1PUMj4i9swClQPnz8LDdmq2WovUFL-wT2mlKIjyxJ0Nw/embed?start=false&loop=false&delayms=20000" frameborder="0" width="960" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+
 {% endblock %}
