Login facebook working, put the Developer id

--- a/microblog-site/microblog/webPage/templates/signin.html
+++ b/microblog-site/microblog/webPage/templates/signin.html
@@ -27,4 +27,8 @@
       <p><input type="submit" value="Sign In"></p>
   </form>
 
+  <button type="submit" class="loginButton" onclick="window.location='loginFacebook'"">
+    <img> 
+  </button>
+
 {% endblock %}
