--- a/microblog-site/microblog/static/css/main.css
+++ b/microblog-site/microblog/static/css/main.css
@@ -24,6 +24,17 @@ header h1.logo:hover {
   color: #fff;
   text-decoration: none;
 }
+
+button.loginButton {
+  background-color: transparent;
+  background-repeat: no-repeat;
+  border: none;
+  width: 300px;
+  height: 64px;
+  vertical-align: middle;
+  cursor: pointer;
+  background: url("http://dpaqzkfinvd5q.cloudfront.net/images/facebook-login-button.png");
+}
  
 /*
  * Center the body content
