--- a/microblog-site/microblog/templates/layout.html
+++ b/microblog-site/microblog/templates/layout.html
@@ -11,7 +11,7 @@
   <body>
    
     <header>
-      <div class="container">
+      <div class="container.forum">
           <strong><nav>
             <ul id="menu">
               <h1 class="logo"> forum</h1>
