--- a/microblog-site/microblog/webPage/templates/userTable.html
+++ b/microblog-site/microblog/webPage/templates/userTable.html
@@ -6,10 +6,10 @@
 
 {% block content %}
 
-    <head>
+    <head class="">
         <title>Tabela de posts</title>
 
-        <link rel="stylesheet" href="http://cdn.datatables.net/1.10.0/css/jquery.dataTables.css" />
+        <!-- <link rel="stylesheet" href="http://cdn.datatables.net/1.10.0/css/jquery.dataTables.css" /> -->
         <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0-rc1/css/bootstrap.min.css" />
 
         <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
